<resources>
    <string name="app_name">Timesheet</string>
    <string name="ADMOB_TIMESHEET_PORTRAIT">ca-app-pub-8642896372691767/8037119165</string>
    <string name="ADMOB_TIMESHEET_LAND">ca-app-pub-8642896372691767/7897518363</string>
    <string name="ADMOB_HISTORY">ca-app-pub-8642896372691767/4804451164</string>
    <string name="ADMOB_SETTINGS">ca-app-pub-8642896372691767/1571783168</string>
    <string name="ADMOB_INTERSTITIAL">ca-app-pub-8642896372691767/7401003969</string>
    <string name="fragment_time_clock">Marker</string>
    <string name="fragment_history">History</string>
    <string name="fragment_settings">Settings</string>
    <string name="time_clock_register">Register Point</string>
    <string name="fragment_settings_hours">Timetable</string>
    <string name="fragment_settings_hourly">Hourly</string>
    <string name="fragment_settings_hourly_hint">Type your hourly</string>
    <string name="fragment_settings_entrance_hour">Register entry and exit times</string>
    <string name="times_entrance_hour">Register below the entry and departure times</string>
    <string name="entrance">Entry</string>
    <string name="pause">Pause</string>
    <string name="back">Back</string>
    <string name="quit">Quit</string>
    <string name="notification_message">Register %s point</string>
    <string name="notification_message_success">Successfully registered point!</string>
    <string name="fragment_settings_notifications">Notifications</string>
    <string name="fragment_settings_notifications_message">Receive notifications in times of point record</string>
    <string name="fragment_settings_changed_notification">%s notification  successfully!</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="no_hour">--:--</string>
    <string name="zero_hour">00:00</string>
    <string name="previous"><![CDATA[<<]]></string>
    <string name="next"><![CDATA[>>]]></string>
    <string name="delete">Delete</string>
    <string name="deleted_message">Deleted successfully Time!</string>
    <string name="undo">Undo</string>
    <string name="total">TOTAL</string>
    <string name="balance">Balance</string>
    <string name="hours">Hours</string>
    <string name="csv">CSV</string>
    <string name="share">Share</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="date">Date</string>
    <string name="first_time">Preparing for the first time</string>
</resources>
